# cursor-memory-bank

./: .env  .gitignore  .gitignore.backup-20250701-153827  .gitignore.backup-20250701-153905  .gitignore.backup-20250701-154227  .gitignore.backup-20250701-154330  =10.0.0  AUDIT_REPORT_TEST_FILES.md  EMERGENCY_BRAKE_RECOVERY_PROCEDURE.md  GEMINI_CLI_INTEGRATION.md  INSTALL_CHANGES.md  Makefile  PLAYWRIGHT_TEST_INSTRUCTIONS.md  README.md  STREAMLIT_FIXES.md  agents.md  debug_mcp_response.js  deleted_test_tasks.json  dummy_test_file.txt  install.sh  long_test_file.py  mcp_config.json  package-lock.json  package.json  pyproject.toml  run_ui.sh  tasks_backup_20250630_225053.json  test_auto_refresh_playwright.py  test_auto_refresh_real_playwright.py  test_autorefresh_validation.py  test_commit_enhancement.tmp  test_commit_fix.tmp  test_commit_scanner.js  test_commit_tool.txt  test_deduplication_cursor_restart.py  test_deduplication_validation.py  test_gemini_cli_local_config.sh  test_gemini_fix.sh  test_install.sh  test_large_file.py  (+18 more)
.agent/: src
.cursor/: mcp.json  run_streamlit.sh  run_ui.sh
.cursor/MCP/: Makefile  mcp_server.py  pyproject.toml
.gemini/: settings.json
.githooks/: pre-commit
docs/: api.md  deployment.md  development.md  index_tasks.md  index_template.md
documentation/: README.md  auto_refresh_research.md  legacy-ui-ml.md  troubleshooting.md
scripts/: create-release.sh  scripts.md
src/: GEMINI.md  hello_world.py  main.py
test_gemini_failure/: test_function.sh  test_missing_scripts.sh
test_gemini_real/: .gitignore  (+1 more)
tests/: dummy_file.txt  (+14 more)
(+376 files in other folders)
