[tool.poetry]
name = "mysteres-unil"
version = "0.1.0"
description = "Plateforme interactive d'expérimentation avec l'IA pour les Mystères de l'UNIL 2025"
authors = ["UNIL <mysteres@unil.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
python-multipart = "^0.0.9"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
redis = "^5.0.2"
websockets = "^12.0"
jinja2 = "^3.1.3"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.1"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
locust = "^2.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"] 