[tool.poetry]  
name = "cursor-mcp-server"  
version = "0.1.0"  
description = "Serveur MCP pour Cursor IDE"  
authors = ["Your Name <your.email@example.com>"]  

[tool.poetry.dependencies]  
python = "^3.7"  
flask = "^2.0.0"  
pytest = "^7.0.0"  

[tool.poetry.dev-dependencies]  

[build-system]  
requires = ["poetry-core>=1.0.0"]  
build-backend = "poetry.core.masonry.api"  